// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderItemWrapper Products renders chat styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  product="chat"
/>
`;

exports[`HeaderItemWrapper Products renders connect styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  product="connect"
/>
`;

exports[`HeaderItemWrapper Products renders explore styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  product="explore"
/>
`;

exports[`HeaderItemWrapper Products renders guide styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  product="guide"
/>
`;

exports[`HeaderItemWrapper Products renders message styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  product="message"
/>
`;

exports[`HeaderItemWrapper Products renders support styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  product="support"
/>
`;

exports[`HeaderItemWrapper Products renders talk styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  product="talk"
/>
`;

exports[`HeaderItemWrapper States renders active styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  active={true}
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
/>
`;

exports[`HeaderItemWrapper States renders focused styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  focused={true}
/>
`;

exports[`HeaderItemWrapper States renders hovered styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  hovered={true}
/>
`;

exports[`HeaderItemWrapper renders default styling 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
/>
`;

exports[`HeaderItemWrapper renders maxX styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  maxX={true}
/>
`;

exports[`HeaderItemWrapper renders maxY styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  maxY={true}
/>
`;

exports[`HeaderItemWrapper renders round styling if provided 1`] = `
<HeaderItem__StyledHeaderItem
  className=""
  data-garden-id="chrome.header_item_wrapper"
  data-garden-version="version"
  round={true}
/>
`;
